--- a/css/style.css
+++ b/css/style.css
@@ -1742,6 +1742,7 @@ img {
 .weather-widget:hover {
     background: var(--primary-hover);
     color: var(--white);
+    font-weight: bold;
     transform: translateY(-3px);
     box-shadow: 0 6px 15px rgba(245, 134, 52, 0.6);
 }
